added login swagger documenation and some spring security URL related issue

--- a/src/main/resources/i18/messages/messages.properties
+++ b/src/main/resources/i18/messages/messages.properties
@@ -8,4 +8,5 @@ logout.success = Logout successfully
 logout.success.details = Logout successfully
 login.successful = Login Successfully
 invalid.credentials = Invalid Credentials
+field.validation.error = Invalid Request
 something.went.wrong = Server encountered an error
