added logged in staff detail

--- a/src/main/resources/i18/messages/messages.properties
+++ b/src/main/resources/i18/messages/messages.properties
@@ -9,4 +9,5 @@ logout.success.details = Logout successfully
 login.successful = Login Successfully
 invalid.credentials = Invalid Credentials
 field.validation.error = Invalid Request
+staff.me.success = Staff Data
 something.went.wrong = Server encountered an error
