added product related API endpoint

--- a/src/main/resources/i18/messages/messages.properties
+++ b/src/main/resources/i18/messages/messages.properties
@@ -10,4 +10,8 @@ login.successful = Login Successfully
 invalid.credentials = Invalid Credentials
 field.validation.error = Invalid Request
 staff.me.success = Staff Data
+product.create.success = Product created successfully
+product.create.fail = Product creation failed
+product.update.success = Product update success
+product.update.fail = Product update failed
 something.went.wrong = Server encountered an error
